force-app/main/default/objects/OA_Graph_Credential__c/OA_Graph_Credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores OAuth 2.0 client credentials for Microsoft Graph API access. Enter values in Setup after deployment. Never commit credentials to source control.</description>
    <label>OA Graph Credential</label>
</CustomObject>