force-app/main/default/objects/OA_Graph_Credential__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Azure AD Application (client) ID. Copy from App Registration Overview in Azure Portal.</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>