force-app/main/default/objects/OA_Graph_Credential__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Azure AD client secret value. Copy immediately after creation in Azure Portal — it cannot be retrieved again after leaving the page. Rotate every 24 months.</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>