force-app/main/default/objects/OA_Graph_Credential__c/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <description>Azure AD Directory (tenant) ID. Copy from App Registration Overview or Azure Active Directory Overview in Azure Portal.</description>
    <label>Tenant Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>